fix java 8 specifics and versions